[package]
name = "rs_batch_process_txns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
csv = "1.1.6"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
